--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Linlin Zhang (lz2981@columbia.com)"
+  avatar           : "images/profile.png"
+  name             : "Linlin Zhang (lz2981@columbia.edu)"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
