--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@
 locale                   : "en-US"
 title                    : "Linlin Zhang / Lucky"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : &name "Linlin Zhang"
+description              : &description "I am an graduate student in CU major in CS, and I love art and music!"
+url                      : https://linlinzhanglucky.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
