--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "images/profile.png"
-  name             : "Linlin Zhang"
+  name             : "Linlin Zhang (lz2981@columbia.edu)"
   pronouns         : "she/her" # example: "she/her"  
   bio              : "I have finished my BS. in UW-Madison, and start my MS. in Columbia University. I major in CS and specifically, I am interested in computer vision, grafic and HCI. I also minor in art and design.(VRAR)"
   location         : "New York"
   employer         : "Columbia University"
   uri              : "https://www.linkedin.com/in/linlin-zhang-a92b6a316/" # URL
-  email            : "lz2981@columbia.edu" 
+  email            : #"lz2981@columbia.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
